# gm-lego-clock

./: Cargo.toml  Cross.toml
.cargo/: config.toml
src/: main.rs
